<resources>
    <string name="app_name">AverageMe</string>

    <!-- Main activity -->
    <string name="main_activity_title">Choisis ton thème</string>
    <string name="sport_btn_label">Sport</string>
    <string name="food_btn_label">Nourriture</string>
    <string name="medley_btn_label">Mélange</string>
    <string name="politique_btn_label">Politique</string>
    <string name="loisir_btn_label">Loisirs</string>
    <string name="society_btn_label">Société</string>


    <!-- Ask activity -->
    <string name="ask_activity_title">Question</string>
    <string name="ask_btn_a">A</string>
    <string name="ask_btn_b">B</string>


    <!-- Answer activity -->
    <string name="answer_activity_title">Résultat</string>
    <string name="answer_btn_next">Question suivante</string>
    <string name="answer_btn_back_to_menu">Retour au menu</string>


    <!-- API Toasts -->
    <string name="api_new_game_impossible">Chargement nouvelle partie impossible</string>



    <!-- AdMod App Id -->
    <string name="avg_app_id">ca-app-pub-3940256099942544~3347511713</string> <!--TODO ADMOB -->

    <!-- AdMob Add Id -->
    <string name="avg_banner">ca-app-pub-3940256099942544/6300978111</string> <!--TODO ADMOB -->
    <string name="avg_interstitial">ca-app-pub-3940256099942544/1033173712</string> <!--TODO ADMOB -->





</resources>
