<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_layout"
    android:background="@color/main_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cl_layout"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/avg_banner">
    </com.google.android.gms.ads.AdView>

    <TextView
        android:id="@+id/answer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cl_layout"
        android:text="@string/answer_activity_title"
        android:textColor="@color/my_grey"
        android:gravity="center"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="55dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ask"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer"
        android:layout_margin="@dimen/normal_size"
        android:textColor="@color/my_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="100dp"
        android:padding="@dimen/big_size"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/cl_layout"
        >



        <Button
            android:id="@+id/btn_back_to_menu"
            android:text="@string/answer_btn_back_to_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/clr_btn_b"
            android:textColor="@color/my_white"
            android:padding="8dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_next"
            android:text="@string/answer_btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/clr_btn_a"
            android:textColor="@color/my_white"
            android:padding="8dp"
            android:textAllCaps="false"/>


    </LinearLayout>




    <!--    <TextView
            android:id="@+id/a"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ask"
            android:layout_marginBottom="@dimen/normal_size"
            android:layout_marginTop="@dimen/normal_size"
            android:padding="@dimen/normal_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/va"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/a"
            android:layout_marginBottom="@dimen/normal_size"
            android:layout_marginTop="@dimen/normal_size"
            android:padding="@dimen/normal_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/b"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/va"
            android:layout_marginBottom="@dimen/normal_size"
            android:layout_marginTop="@dimen/normal_size"
            android:padding="@dimen/normal_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/vb"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b"
            android:layout_marginBottom="@dimen/normal_size"
            android:layout_marginTop="@dimen/normal_size"
            android:padding="@dimen/normal_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />-->

</android.support.constraint.ConstraintLayout>